--- a/octone.css
+++ b/octone.css
@@ -24,11 +24,6 @@ a {
     text-decoration: none;
     color: #000;
 }
-select {
-    border: none;
-    margin-left: 0.1rem;
-    visibility: hidden;
-}
 input:focus {
     outline: none;
 }
@@ -37,6 +32,9 @@ input::placeholder {
 }
 
 /* Header */
+.nav-links-1 input, .nav-links-1 label {
+    display: none;
+}
 nav a {
     color: #000;
 }
@@ -44,10 +42,13 @@ nav > a {
     font-size: 3rem;
     font-weight: 700;
 }
-.nav-links-1 {
+.nav-links-1 ul {
     display: flex;
-    gap: 0.4rem;
+    gap: 5rem;
     font-size: 1.5rem;
+}
+.nav-links-1 li {
+    list-style: none;
 }
 .nav-links-1 label:hover, .nav-links-1 a:hover {
     color: var(--secondary-color);
@@ -96,6 +97,7 @@ nav {
 }
 .header-2-1 p {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.5rem;
 }
 .play-btn {
     width: 2.2rem;
@@ -141,6 +143,7 @@ nav {
     flex-direction: column;
     justify-content: center;
     gap: 2rem;
+    width: 34%;
 }
 .header-2-2-1 img {
     height: 35rem;
@@ -382,8 +385,8 @@ nav {
     background-color: var(--bg-color);
     width: 4rem;
     height: 4rem;
-    display: flex;
     position: relative;
+    aspect-ratio: 1/1;
 }
 .section-2-2-5 div:nth-child(1)::before {
     content: "";
@@ -394,9 +397,12 @@ nav {
     border-left: 1.5rem solid white;
     position: absolute;
     left: 35%;
-    top: 22%;
+    top: 27%;
 }
 .section-2-2 h5 {
+    font-size: 1.7rem;
+}
+.section-2-2 p {
     font-size: 1.5rem;
 }
 .section-2-2 > div {
@@ -407,8 +413,9 @@ nav {
 .section-2-2 {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 2rem;
     justify-content: center;
+    width: 55%;
 }
 .section-2 {
     display: flex;
@@ -416,7 +423,7 @@ nav {
     align-items: center;
 }
 section {
-    background-color: #faf8f8;
+    background-color: #fff;
     padding: 5rem 0;
     display: flex;
     gap: 4rem;
@@ -439,12 +446,13 @@ section {
     text-align: center;
     letter-spacing: 0.07rem;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.5rem;
 }
-#vis-br, #vis-br-2 {
-    display: block;
+.article-1 p {
+    width: 70%;
 }
 .article-z > img {
-    width: 20rem;
+    width: 100%;
     border-radius: 1.5rem;
 }
 .article-z-2-1 a {
@@ -475,7 +483,7 @@ section {
     align-items: center;
 }
 .article-z-2 + h3 {
-    font-size: 2rem;
+    font-size: 1.7rem;
 }
 .article-z {
     width: max-content;
@@ -537,6 +545,7 @@ section {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    width: 25%;
 }
 .article-2 {
     display: flex;
@@ -582,7 +591,7 @@ article {
     align-self: flex-start;
 }
 .main-3-1 {
-    width: max-content;
+    width: 32%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -610,6 +619,9 @@ article {
 }
 
 /* aside */
+.aside-1-1 p {
+    width: 70%;
+}
 .asbox-z > img {
     width: 5rem;
     border-radius: 50%;
@@ -639,7 +651,7 @@ article {
     flex-direction: column;
     gap: 1rem;
     padding: 2rem;
-    width: max-content;
+    width: 25%;
     background-color: #fff;
     border-radius: 1rem;
 }
@@ -654,7 +666,7 @@ article {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .aside-1 {
-    padding: 5rem 0;
+    padding: 5rem 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -687,16 +699,18 @@ article {
 .aside-2-1 > div:nth-child(2) {
     display: flex;
     gap: 1rem;
+    width: 70%;
 }
 .aside-2-1 {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 2rem;
     margin: 0 auto;
 }
 .aside-2 > div {
     background: linear-gradient(to bottom right,  var(--secondary-color), var(--bg-color));
-    width: max-content;
+    width: 80%;
     padding: 4rem 6rem;
     border-radius: 2rem;
 }
@@ -725,9 +739,6 @@ footer {
     font-size: 1.2rem;
     line-height: 1.1rem;
 }
-.footer-1-1 p br {
-    display: none;
-}
 .footer-1-1 img {
     filter: brightness(0) invert(1);
     width: 2rem;
@@ -737,11 +748,12 @@ footer {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    width: 20%;
 }
 .footer-1-2 a {
     color: #fff;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1rem;
+    font-size: 1.3rem;
 }
 .footer-1-2 a:hover {
     color: var(--primary-color);
@@ -768,8 +780,8 @@ footer {
 }
 .footer-1 {
     display: flex;
-    justify-content: center;
-    gap: 5rem;
+    justify-content: space-evenly;
+    padding: 0 4rem;
 }
 footer hr {
     margin: 2rem 0;
@@ -804,31 +816,116 @@ footer > p {
     html {
         font-size: 37.5%;
     }
-    br {
-        display: block;
-    }
-    #vis-br, #vis-br-2 {
-        display: none;
-    }
 }
 @media (max-width: 632px) {
-    html {
-        font-size: 37.5%;
-    }
     p {
         font-size: 1.5rem;
     }
 }
 @media (max-width: 630px) {
-    .header-2,.section-2, .article-2, .main-3, .aside-1-2, .footer-1 {
+    html {
+        font-size: 50%;
+    }
+    .header-2,.section-2, .article-2, .main-3, .aside-1-2 {
         flex-direction: column;
         align-items: center;
     }
     .header-2, .section-2, .main-3 {
         gap: 4rem;
     }
-    .footer-1-1 p br:nth-child(2n+1) {
+    .header-2-1 {
+        margin-top: 3rem;
+        width: 70%;
+    }
+    .header-2-2-1 img {
+        height: 30rem;
+    }
+    .header-2-2-1::before {
+        left: 2%;
+    }
+    .header-2-2 {
+        margin-left: 10rem;
+    }
+    .header-2-1-3 {
+        align-self: center;
+    }
+    .header-2 {
+        align-items: center;
+    }
+    .section-2-1 {
+        width: ;
+        margin: 2rem auto;
+    }
+    .section-2-2 {
+        width: 90%;
+    }
+    .article-z {
+        width: 80%;
+    }
+    .article-z-3 {
+        justify-content: flex-start;
+        gap: 1rem;
+    }
+    .main-3-1 {
+        width: 70%;
+        gap: 2rem;
+    }
+    .main-3-2 {
+        order: -1;
+    }
+    .main-3 {
+        gap: 5rem;
+    }
+    .asbox{
+        width: 80%;
+    }
+    .aside-2-1-1 p {
+        width: 80%;
+    }
+    .aside-2-1 input {
+        width: 99%;
+    }
+    .aside-2-1 > div:nth-child(2) {
+        flex-direction: column;
+        align-items: center;
+    }
+    .aside-2 > div {
+        padding: 3rem 1rem;
+    }
+    .footer-1-1 h1 {
+        font-size: 1.8rem;
+    }
+    .footer-1-1 p, .footer-1-2 a {
+        font-size: 1rem;
+    }
+
+    .nav-links-1 input, .nav-links-1 label {
         display: block;
     }
+    .nav-links-1 input {
+        visibility: hidden;
+    }
+    .nav-links-1 label {
+        font-size: 3rem;
+        cursor: pointer;
+    }
+    .nav-links-1 ul {
+        flex-direction: column;
+        gap: 1.2rem;
+        display: none;
+    }
+    #menu-toggle:checked ~ .ul {
+        display: flex;
+    }
+    .nav-links-1 {
+        order: -1;
+    }
+    #header-3-b {
+        display: none;
+    }
 }
-
+@media (max-width: 400px) {
+    html {
+        font-size: 43.75%;
+    }
+}
